--- a/Portfolio.HTML
+++ b/Portfolio.HTML
@@ -16,8 +16,8 @@
     <header>
         <a href="#"  class="Logo">Dara</a>
         <nav>
-            <a href="" class="active">Home</a>
-            <a href="">Services</a>
+            <a href="">Home</a>
+            <a href="#Me">About Me</a>
             <a href="">Skill</a>
             <a href="">Education</a>
             <a href="">Experience</a>
@@ -42,5 +42,16 @@
             <a href="" class="btn">Hire me</a>
         </div>
     </section>
+    <div class="mian">
+        <div class="pic"><img src="logo.png" alt="profile"></div>
+        <div class="box-text">
+            <div class="text1"><h1>Hello, I’m Dara</h1></div>
+            <div class="text2"><p>I am 16 years old highly skilled full stack developer
+                with <br>3 years of experience. I possess a strong knowledge of HTML, CSS, 
+                JavaScript, frameworks such as React, also,<br>i knowledge of Kali Linux.</p>
+            </div>
+        </div>
+        <div class="about-me" id="Me"><span>About Me</span></div>
+    </div>
 </body>
 </html>
