--- a/index.HTML
+++ b/index.HTML
@@ -20,8 +20,8 @@
             <a href="#myMe">About Me</a>
             <a href="#myEducation">Education</a>
             <a href="#myExperience">Experience</a>
-            <a href="">Skills</a>
-            <a href="">Contact</a>
+            <a href="#mySkill">Skills</a>
+            <a href="#myProject">Projects</a>
         </nav>
     </header>
     <section class="home">
@@ -96,22 +96,57 @@
         </div>
     </div>
     <div class="mian-4">
-        <div class="title"></div>
-        <div class="skill-text"></div>
+        <div class="title" id="mySkill"><span>Skills</span></div>
+        <div class="skill-text"><p>This is my skills. What I do.</p></div>
         <div class="mian-box">
-            <div class="box1"><img src="skil1.png" alt=""></div>
-            <div class="box2"><img src="skill2.png" alt=""></div>
-            <div class="box3"><img src="skill3.png" alt=""></div>
-            <div class="box4"><img src="skill4.png" alt=""></div>
-            <div class="box5"><img src="skill5.png" alt=""></div>
+            <div class="box1">
+                <div class="box1-text"><h1>80%</h1></div>
+                <img src="skil1.png" alt=""></div>
+            <div class="box2">
+                 <div class="box2-text"><h1>90%</h1></div>
+                <img src="skill2.png" alt=""></div>
+            <div class="box3">
+                 <div class="box3-text"><h1>70%</h1></div>
+                <img src="skill3.png" alt=""></div>
+            <div class="box4">
+                 <div class="box4-text"><h1>60%</h1></div>
+                <img src="skill4.png" alt=""></div>
+            <div class="box5">
+                 <div class="box5-text"><h1>50%</h1></div>
+                <img src="skill5.png" alt=""></div>
         </div>
         <div class="mian-box1">
-             <div class="box-1"><img src="htnl.png" alt=""></div>
+            <div class="box-1"><img src="htnl.png" alt=""></div>
             <div class="box-2"><img src="css.png" alt=""></div>
             <div class="box-3"><img src="js.png" alt=""></div>
             <div class="box-4"><img src="php.png" alt=""></div>
             <div class="box-5"><img src="figma.png" alt=""></div>
         </div>
+    </div>
+
+    <div class="mian-5">
+        <div class="titlee" id="myProject"><span>Projects</span></div>
+        <div class="texttt"><p>Each project represents a 
+            step in my journey-combining design, technology, 
+            and problem-solving to bring ideas to life. <br> These works 
+            showcase my growth, creativity, and dedication to building 
+            meaningful digital experiences.</p></div>
+        <div class="imgg">
+            <div class="imgg1"><img src="111.png" alt=""></div>
+            <div class="imgg2"><img src="222.png" alt=""></div>
+            <div class="imgg3"><img src="333.png" alt="" srcset=""></div>
+        </div>
+        <div class="view">
+            <div class="view1"><a href="">View Project</a></div>
+            <div class="view2"><a href="">View Project</a></div>
+            <div class="view3"><a href="">View Project</a></div>
+        </div>
+    </div>
+    <div class="mian-6">
+        <div class="footer">
+            
+        </div>
+        <div class="date"></div>
     </div>
 </body>
 </html>
