--- a/index.HTML
+++ b/index.HTML
@@ -193,6 +193,8 @@
           <div class="row3">
             <h1>Privacy Policy</h1>
             <h1>Teams&Conditions</h1>
+            <h1>contact</h1>
+            <h1>Project</h1>
           </div>
         </div>
         <div class="contact">
